--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">My Application HW1</string>
+    <string name="app_name">Space Dodge</string>
+    <string name="google_maps_key">AIzaSyCD_x4uKd6Bs_XEbxm1A9nl-GxdIC6EnwM</string>
+
 </resources>
